# dlib

./: .remote-sync.json  README.md
app/: CMakeLists.txt  Makefile  Rules.mk  cc_face_detector.cpp  demo.cpp
app/camera/: CMakeLists.txt  Makefile
app/camera/header/: jetson_stream_manager.h  stream_manager.h
app/camera/src/: jetson_stream_manager.cpp  stream_manager.cpp
app/detector/: CMakeLists.txt
app/detector/header/: cc_common.h  cc_face_detector.h
app/detector/src/: cc_face_detector.cpp
app/header/: cc_face_detector.h
app/src/: cc_face_detector.cpp
dlib/: config.h
examples/: CMakeLists.txt  dnn_face_recognition_ex.cpp  face_detection_ex.cpp
